apps/synapse/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix
spec:
  hostnames:
    - matrix.taila659a.ts.net
    - matrix.i.shikanime.studio
  parentRefs:
    - name: synapse
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-discord-media
spec:
  hostnames:
    - matrix-discord-media.i.shikanime.studio
    - matrix-discord-media.taila659a.ts.net
  parentRefs:
    - name: synapse
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix-redirect
spec:
  hostnames:
    - matrix.taila659a.ts.net
    - matrix.i.shikanime.studio
    - matrix-discord-media.i.shikanime.studio
    - matrix-discord-media.taila659a.ts.net
  parentRefs:
    - name: synapse
      sectionName: http
